--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
       src="https://kit.fontawesome.com/9284b8dab3.js"
       crossorigin="anonymous"
     ></script>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Mulish:wght@200;300;400;500;600;700;800;900&display=swa"
